[498324] Fix DOT test problems.
- Ensured all DOT tests are executed in a single test suite, which uses
UI harness. 
- Ensured DotImport has its fields statically injected (similar to
DotAttributes).
- Ensured DotAttributes can still be used standalone (i.e. the parser is
created by using standalone setup in case its not injected).
- Ensured all tests are executed with -XstartOnFirstThread on Mac.
Prevented this for mvc.tests.fx and zest.tests.fx, which currently fail
(we still have to adjust NonFxApplicationThread rule).